--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "command_generator"]
-	path = command_generator
-	url = https://github.com/johaq/CommandGenerator.git
+[submodule "CommandGeneratorJP"]
+	path = CommandGeneratorJP
+	url = https://github.com/RoboCupAtHomeJP/CommandGeneratorJP
